--- a/resources/metadata/maven.yaml
+++ b/resources/metadata/maven.yaml
@@ -1,8 +1,62 @@
 metadata:
-  description: Maven
-  longDescription: Maven
   name: mavenExecute
+  description: Ths step allows to run maven commands
+  longDescription: Ths step allows to run maven commands
 spec:
-  containers:
-    - name: maven
-      image: maven:3-jdk-8
+  inputs:
+    params:
+      - name: pomPath
+        type: string
+        description: Path to the pom file that should be used.
+        scope:
+        - PARAMETERS
+        - STEPS
+        mandatory: false
+      - name: projectSettingsFile
+        type: string
+        description: Path to the mvn settings file that should be used as project settings file.
+        scope:
+        - PARAMETERS
+        - STEPS
+        mandatory: false
+      - name: globalSettingsFile
+        type: string
+        description: Path to the mvn settings file that should be used as global settings file.
+        scope:
+        - PARAMETERS
+        - STEPS
+        mandatory: false
+      - name: m2Path
+        type: string
+        description: Path to the location of the local repository that should be used.*/
+        scope:
+        - PARAMETERS
+        - STEPS
+        mandatory: false
+      - name: goals
+        type: '[]string'
+        description: Maven goals that should be executed.
+        scope:
+        - PARAMETERS
+        mandatory: true
+      - name: defines
+        type: '[]string'
+        description: Additional properties in form of -Dkey=value.
+        scope:
+        - PARAMETERS
+        mandatory: false
+      - name: flags
+        type: '[]string'
+        description: Flags to provide when running mvn.
+        scope:
+        - PARAMETERS
+        - STEPS
+        mandatory: false
+      - name: logSuccessfulMavenTransfers
+        type: bool
+        description: Configures maven to log successful downloads. This is set to `false` by default to reduce the noise in build logs.
+        scope:
+        - PARAMETERS
+        default: false
+        mandatory: false
+  #outputs:
